--- a/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app.Android/xamarin_notes_app.Android.csproj
+++ b/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app.Android/xamarin_notes_app.Android.csproj
@@ -61,6 +61,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomEntryRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
