--- a/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app.csproj
+++ b/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app/xamarin_notes_app.csproj
@@ -31,6 +31,9 @@
     <EmbeddedResource Update="Views\AddNewTask.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\CustomCardView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ProfilePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
